# Ref

.learnings/: ERRORS.md  LEARNINGS.md
endnote-mcp/: .gitignore  CITATION.cff  README.md  pyproject.toml  server.json
endnote-mcp/.github/workflows/: test.yml
endnote-mcp/scripts/: index_library.py
endnote-mcp/src/endnote_mcp/: __init__.py  citation.py  cli.py  config.py  db.py  embeddings.py  endnote_parser.py  pdf_indexer.py  search.py  server.py
endnote-mcp/tests/: conftest.py  test_citation.py  test_config.py  test_db.py  test_embeddings.py  test_parser.py  test_pdf_indexer.py  test_search.py
pubmed-cli/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SKILL.md  add_to_zotero.py  go.mod  go.sum  li_zhijie_papers.json  li_zhijie_papers_list.md
pubmed-cli/.github/: CODEOWNERS  pull_request_template.md  release.yml
pubmed-cli/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
pubmed-cli/.github/workflows/: ci.yml  release-assets.yml
pubmed-cli/cmd/pubmed/: main.go  main_test.go  refcheck.go
pubmed-cli/docs/: homebrew.md  index.html  testing-guide.html
pubmed-cli/docs/development/: CODE_REVIEW.md  TDD.md  UX_TESTING.md
pubmed-cli/internal/eutils/: client.go  client_test.go  fetch.go  fetch_test.go  integration_test.go  link.go  link_test.go  search.go  search_test.go  types.go
pubmed-cli/internal/mesh/: integration_test.go  mesh.go  mesh_test.go
pubmed-cli/internal/ncbi/: client.go  client_test.go
pubmed-cli/internal/output/: csv.go  csv_test.go  format.go  format_test.go  human.go  human_test.go  ris.go  ris_test.go
pubmed-cli/internal/refcheck/: audit.go  audit_test.go  extract.go  extract_test.go  hallucinate.go  hallucinate_test.go  parse.go  parse_test.go  report.go  report_test.go  resolve.go  resolve_test.go  score.go  score_test.go  types.go
pubmed-cli/scripts/: release.sh
pubmed-cli/skills/pandoc-docx/: SKILL.md
pubmed-cli/skills/pandoc-docx/assets/: nih-reference.docx
pubmed-cli/skills/pandoc-docx/references/: cookbook.md
pubmed-cli/skills/pptx-dotnet/: .dockerignore  Dockerfile  SKILL.md  presentation-generation.workflow.json
pubmed-cli/skills/pptx-dotnet/assets/: scaffold-16-10.pptx  scaffold-16-9.pptx  scaffold-4-3.pptx
pubmed-cli/skills/pptx-dotnet/references/: ooxml-reference.md  themes.json
pubmed-cli/skills/pptx-dotnet/scripts/: Directory.Build.props
pubmed-cli/skills/pptx-dotnet/scripts/Replace/: Program.cs
pubmed-cli/skills/pubmed-cli-workflow/: SKILL.md
pubmed-cli/skills/pubmed-cli-workflow/references/: cli-cookbook.md
pubmed-cli/testdata/: efetch_collective_author.xml  efetch_medlinedate.xml  efetch_missing_fields.xml  efetch_nested_tags.xml  efetch_response.xml  efetch_simple.xml  fxs_biomarkers_manuscript.docx  mesh_fetch.txt  sample_references.txt  sample_references_minimal.txt
reference-workflow/: .gitignore  HANDOFF.md  README.md  endnote_to_zotero.py  ref_workflow.py
reference-workflow/docs/: endnote_migration_errors.md
reference-workflow/tests/: test_ref_workflow.py
reference-workflow/utils/: __init__.py  bibtex_converter.py  endnote_reader.py  zotero_client.py
zotero-mcp/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SESSION_LOG.md  pyproject.toml
zotero-mcp/.github/workflows/: release.yml
zotero-mcp/docs/: ANNOTATION_FEATURE.md  getting-started.md  integration-test-plan.md
zotero-mcp/src/zotero_mcp/: __init__.py  _app.py  _context.py  better_bibtex_client.py  chroma_client.py  citation_import.py  cli.py  cli_standalone.py  client.py  local_db.py  openai_batch.py  pdf_layout.py  pdfannots_helper.py  prompts.py  resources.py  scite_client.py  semantic_search.py  server.py  setup_helper.py  updater.py  utils.py  webdav.py
zotero-mcp/src/zotero_mcp/tools/: __init__.py  _helpers.py  annotations.py  connectors.py  discovery.py  read_pdf.py  retrieval.py  scite.py  search.py  synthesis.py  write.py
zotero-mcp/tests/: conftest.py  test_add_by_bibtex.py  test_add_by_csl_json.py  test_add_by_doi.py  test_add_by_isbn.py  test_add_by_url.py  test_add_from_file.py  test_annotation_document_text.py  test_api_lock_bounded.py  test_batch_update_extra.py  test_better_bibtex_client.py  test_citation_import.py  test_cli_help.py  test_cli_standalone.py  test_collection_resolver.py  test_collection_standalone_attachments.py  test_collections.py  test_collections_backstop.py  test_delete_item.py  test_description_tokens.py  test_discovery.py  test_duplicates.py  test_embedding_function_registration.py  test_feed_retrieval.py  test_fulltext_local_mode.py  test_fulltext_non_pdf_html.py  test_fulltext_sync_watermark.py  test_fulltext_web_mode.py  test_group_library_url.py  test_idempotent_adds.py  test_identifier_fields_markdown.py  test_item_metadata_status.py  test_item_related.py  test_lifespan.py  test_local_db.py  test_local_http1_transport.py  test_metadata_formats.py  test_openai_batch.py  test_openai_embedding_batching.py  test_page_layout.py  (+22 more)
zotero-word-mcp/: .gitignore  README.md  pyproject.toml  requirements.txt
zotero-word-mcp/docs/: DEVELOPMENT_REVIEW.md  PUBLISHING.md
zotero-word-mcp/src/zotero_word_mcp/: config.py  native_bridge.py  reference_formatter.py  server.py  word_bridge.py
(+16 files in other folders)
