[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-word-mcp"
version = "0.1.0"
description = "Windows-only MCP server for inserting native Zotero citations into Microsoft Word."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Zhang Chaokai" }
]
dependencies = [
  "mcp[cli]>=1.9.0,<2",
  "pywin32>=308",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/Zhangchaokai1/zotero-word-mcp"
Repository = "https://github.com/Zhangchaokai1/zotero-word-mcp"

[project.scripts]
zotero-word-mcp = "zotero_word_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
